[gd_scene load_steps=5 format=2]

[ext_resource path="res://Menus/PauseMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/HUD.tscn" type="PackedScene" id=2]
[ext_resource path="res://environment.tres" type="Environment" id=4]
[ext_resource path="res://Levels/Level.gd" type="Script" id=8]

[node name="Level" type="Spatial"]
script = ExtResource( 8 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.707107, -0.671496, 0.221569, 0, 0.313346, 0.949639, -0.707107, -0.671496, 0.221569, 0, 5.653, 0 )
shadow_enabled = true
shadow_color = Color( 0.627451, 0.627451, 0.627451, 1 )
directional_shadow_max_distance = 173.6

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 4 )

[node name="LevelCamera" type="Camera" parent="."]
transform = Transform( -4.37114e-08, -0.768094, 0.640338, 0, 0.640338, 0.768094, -1, 3.35744e-08, -2.799e-08, 3.45169, 4.98672, 0.184951 )

[node name="LevelUI" type="CanvasLayer" parent="."]

[node name="WaitingForPlayersOverlay" type="ColorRect" parent="LevelUI"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.45098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="LevelUI/WaitingForPlayersOverlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.0
margin_top = -8.0
margin_right = 96.0
margin_bottom = 8.0
size_flags_vertical = 3
bbcode_enabled = true
bbcode_text = "[center]Waiting for players...[/center]"
text = "Waiting for players..."
fit_content_height = true

[node name="SpawnPositions" type="Node" parent="."]

[node name="BlueTeam" type="Node" parent="SpawnPositions"]

[node name="Position3D" type="Position3D" parent="SpawnPositions/BlueTeam"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.2521, 0.242309, 7.4828 )

[node name="Position3D2" type="Position3D" parent="SpawnPositions/BlueTeam"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.2521, 0.242309, 6.40313 )

[node name="Position3D3" type="Position3D" parent="SpawnPositions/BlueTeam"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.9604, 0.242309, 6.40313 )

[node name="Position3D4" type="Position3D" parent="SpawnPositions/BlueTeam"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.9604, 0.242309, 7.4103 )

[node name="RedTeam" type="Node" parent="SpawnPositions"]

[node name="Position3D" type="Position3D" parent="SpawnPositions/RedTeam"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.48635, 0.242309, 6.25197 )

[node name="Position3D2" type="Position3D" parent="SpawnPositions/RedTeam"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.48635, 0.242309, 7.73577 )

[node name="Position3D3" type="Position3D" parent="SpawnPositions/RedTeam"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.86108, 0.242309, 7.73577 )

[node name="Position3D4" type="Position3D" parent="SpawnPositions/RedTeam"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.86108, 0.242309, 6.18797 )

[node name="HUD" parent="." instance=ExtResource( 2 )]

[node name="PauseMenu" parent="." instance=ExtResource( 1 )]
